# hs_tests

./: CMakeLists.txt  README.md  settings.json  test.json  test_example.json  version.h
src/: CMakeLists.txt  LangTranslation.cpp  LangTranslation.hpp  MainWindow.cpp  MainWindow.hpp  MultipleQuestionImageWidget.cpp  MultipleQuestionImageWidget.hpp  MultipleQuestionWidget.cpp  MultipleQuestionWidget.hpp  OptionWidget.cpp  OptionWidget.hpp  QuestionWidget.cpp  QuestionWidget.hpp  SingleQuestionWidget.cpp  SingleQuestionWidget.hpp  TestWidget.cpp  TestWidget.hpp  main.cpp  version.hpp
src/resources/: resources.qrc
src/resources/settings/: lang.json
